@@ -86,12 +86,13 @@ public class DataciteServiceTest {
     @Test
     public void checkThatIsDataciteUpdatableIfEverythingIsPresent() {
         //Given
-        ResponsibleParty author = ResponsibleParty.builder().role("author").build();
-        ResponsibleParty publisher = ResponsibleParty.builder().role("publisher").organisationName("Test publisher").build();
+        ResponsibleParty author = ResponsibleParty.builder().build();
+        ResponsibleParty publisher = ResponsibleParty.builder().organisationName("Test publisher").build();
         MetadataInfo metadata = MetadataInfo.builder().state("published").build();
         metadata.addPermission(Permission.VIEW, PUBLIC_GROUP);
         GeminiDocument document = new GeminiDocument();
-        document.setResponsibleParties(Arrays.asList(author, publisher));
+        document.setAuthors(List.of(author));
+        document.setPublishers(List.of(publisher));
         document.setDatasetReferenceDate(DatasetReferenceDate.builder().publicationDate(LocalDate.of(2010, Month.MARCH, 2)).build());
         document.setTitle("Title");
         document.setMetadata(metadata);
@@ -107,12 +108,13 @@ public class DataciteServiceTest {
     @Test
     public void checkThatIsNotDatacitableIfPublicationDateIsInFuture() {
         //Given
-        ResponsibleParty author = ResponsibleParty.builder().role("author").build();
-        ResponsibleParty publisher = ResponsibleParty.builder().role("publisher").organisationName("Test publisher").build();
+        ResponsibleParty author = ResponsibleParty.builder().build();
+        ResponsibleParty publisher = ResponsibleParty.builder().organisationName("Test publisher").build();
         MetadataInfo metadata = MetadataInfo.builder().state("published").build();
         metadata.addPermission(Permission.VIEW, PUBLIC_GROUP);
         GeminiDocument document = new GeminiDocument();
-        document.setResponsibleParties(Arrays.asList(author, publisher));
+        document.setAuthors(List.of(author));
+        document.setPublishers(List.of(publisher));
         document.setDatasetReferenceDate(DatasetReferenceDate.builder().publicationDate(LocalDate.of(2110, Month.MARCH, 2)).build());
         document.setTitle("Title");
         document.setMetadata(metadata);
@@ -128,12 +130,13 @@ public class DataciteServiceTest {
     @Test
     public void checkThatIsDatacitableIfPublicationDateIsToday() {
         //Given
-        ResponsibleParty author = ResponsibleParty.builder().role("author").build();
-        ResponsibleParty publisher = ResponsibleParty.builder().role("publisher").organisationName("Test publisher").build();
+        ResponsibleParty author = ResponsibleParty.builder().build();
+        ResponsibleParty publisher = ResponsibleParty.builder().organisationName("Test publisher").build();
         MetadataInfo metadata = MetadataInfo.builder().state("published").build();
         metadata.addPermission(Permission.VIEW, PUBLIC_GROUP);
         GeminiDocument document = new GeminiDocument();
-        document.setResponsibleParties(Arrays.asList(author, publisher));
+        document.setAuthors(List.of(author));
+        document.setPublishers(List.of(publisher));
         document.setDatasetReferenceDate(DatasetReferenceDate.builder().publicationDate(LocalDate.now()).build());
         document.setTitle("Title");
         document.setMetadata(metadata);
@@ -149,12 +152,13 @@ public class DataciteServiceTest {
     @Test
     public void checkThatIsDatacitableIfPublisherIsLegacy() {
         //Given
-        ResponsibleParty author = ResponsibleParty.builder().role("author").build();
-        ResponsibleParty publisher = ResponsibleParty.builder().role("publisher").organisationName("Test legacy publisher").build();
+        ResponsibleParty author = ResponsibleParty.builder().build();
+        ResponsibleParty publisher = ResponsibleParty.builder().organisationName("Test legacy publisher").build();
         MetadataInfo metadata = MetadataInfo.builder().state("published").build();
         metadata.addPermission(Permission.VIEW, PUBLIC_GROUP);
         GeminiDocument document = new GeminiDocument();
-        document.setResponsibleParties(Arrays.asList(author, publisher));
+        document.setAuthors(List.of(author));
+        document.setPublishers(List.of(publisher));
         document.setDatasetReferenceDate(DatasetReferenceDate.builder().publicationDate(LocalDate.now()).build());
         document.setTitle("Title");
         document.setMetadata(metadata);
@@ -170,12 +174,13 @@ public class DataciteServiceTest {
     @Test
     public void checkThatIsDatacitableIfPublisherIsNormal() {
         //Given
-        ResponsibleParty author = ResponsibleParty.builder().role("author").build();
-        ResponsibleParty publisher = ResponsibleParty.builder().role("publisher").organisationName("Test publisher").build();
+        ResponsibleParty author = ResponsibleParty.builder().build();
+        ResponsibleParty publisher = ResponsibleParty.builder().organisationName("Test publisher").build();
         MetadataInfo metadata = MetadataInfo.builder().state("published").build();
         metadata.addPermission(Permission.VIEW, PUBLIC_GROUP);
         GeminiDocument document = new GeminiDocument();
-        document.setResponsibleParties(Arrays.asList(author, publisher));
+        document.setAuthors(List.of(author));
+        document.setPublishers(List.of(publisher));
         document.setDatasetReferenceDate(DatasetReferenceDate.builder().publicationDate(LocalDate.now()).build());
         document.setTitle("Title");
         document.setMetadata(metadata);
@@ -191,12 +196,13 @@ public class DataciteServiceTest {
     @Test
     public void checkThatIsNotDatacitableIfPublisherIsLegacy() {
         //Given
-        ResponsibleParty author = ResponsibleParty.builder().role("author").build();
-        ResponsibleParty publisher = ResponsibleParty.builder().role("publisher").organisationName("Test legacy publisher").build();
+        ResponsibleParty author = ResponsibleParty.builder().build();
+        ResponsibleParty publisher = ResponsibleParty.builder().organisationName("Test legacy publisher").build();
         MetadataInfo metadata = MetadataInfo.builder().state("published").build();
         metadata.addPermission(Permission.VIEW, PUBLIC_GROUP);
         GeminiDocument document = new GeminiDocument();
-        document.setResponsibleParties(Arrays.asList(author, publisher));
+        document.setAuthors(List.of(author));
+        document.setPublishers(List.of(publisher));
         document.setDatasetReferenceDate(DatasetReferenceDate.builder().publicationDate(LocalDate.now()).build());
         document.setTitle("Title");
         document.setMetadata(metadata);
@@ -297,13 +303,14 @@ public class DataciteServiceTest {
     }
 
     private GeminiDocument getGeminiDocument(){
-        val author = ResponsibleParty.builder().role("author").givenName("Arthur").familyName("Arbor").build();
-        val publisher = ResponsibleParty.builder().role("publisher").organisationName("Test publisher").build();
+        val author = ResponsibleParty.builder().givenName("Arthur").familyName("Arbor").build();
+        val publisher = ResponsibleParty.builder().organisationName("Test publisher").build();
         val metadata = MetadataInfo.builder().state("published").build();
         metadata.addPermission(Permission.VIEW, PUBLIC_GROUP);
         val document = new GeminiDocument();
         document.setDescription("This is the description");
-        document.setResponsibleParties(Arrays.asList(author, publisher));
+        document.setAuthors(List.of(author));
+        document.setPublishers(List.of(publisher));
         document.setDatasetReferenceDate(DatasetReferenceDate.builder().publicationDate(LocalDate.of(2010, Month.MARCH, 2)).build());
         document.setTitle("Title");
         document.setMetadata(metadata);
@@ -313,13 +320,14 @@ public class DataciteServiceTest {
     }
 
     private GeminiDocument getGeminiDocumentWithLegacyPublisher(){
-        val author = ResponsibleParty.builder().role("author").givenName("Bob").familyName("Foo").build();
-        val publisher = ResponsibleParty.builder().role("publisher").organisationName("Test legacy publisher").build();
+        val author = ResponsibleParty.builder().givenName("Bob").familyName("Foo").build();
+        val publisher = ResponsibleParty.builder().organisationName("Test legacy publisher").build();
         val metadata = MetadataInfo.builder().state("published").build();
         metadata.addPermission(Permission.VIEW, PUBLIC_GROUP);
         val document = new GeminiDocument();
         document.setDescription("This is the description");
-        document.setResponsibleParties(Arrays.asList(author, publisher));
+        document.setAuthors(List.of(author));
+        document.setPublishers(List.of(publisher));
         document.setDatasetReferenceDate(DatasetReferenceDate.builder().publicationDate(LocalDate.of(2010, Month.MARCH, 2)).build());
         document.setTitle("Title");
         document.setMetadata(metadata);
